hphp/test/zend/good/zend-traits-bugs/overridding-conflicting-property-initializer.php.exp
HipHop Fatal error: trait declaration of property 'zoo' is incompatible with previous declaration in hphp/test/zend/good/zend-traits-bugs/overridding-conflicting-property-initializer.php on line 9
